fixed inferfence issue, cleaned up code, auto geenrate inference calls

--- a/python/Makefile
+++ b/python/Makefile
@@ -6,18 +6,32 @@ REMOVE  = rm -rf
 INCLUDE = ../include
 DATA    = ../data
 
-all: $(INCLUDE)/weights.h $(INCLUDE)/test_images.h
+all: $(INCLUDE)/weights.h $(INCLUDE)/test_images.h $(INCLUDE)/auto_infer.c $(DATA)/weights_float.bin
 
 $(INCLUDE)/weights.h: create_weights.py write_weights.py lenet.py
 	$(PYTHON) create_weights.py
-	$(MOVE) weights.h $(INCLUDE)
-	$(MOVE) weights_float.bin $(DATA)
+	$(MOVE) weights.h          $(INCLUDE)
+	$(MOVE) auto_infer.c       $(INCLUDE)
+	$(MOVE) weights_float.bin  $(DATA)
+
+$(INCLUDE)/auto_infer.c: create_weights.py write_weights.py lenet.py
+	$(PYTHON) create_weights.py
+	$(MOVE) weights.h          $(INCLUDE)
+	$(MOVE) auto_infer.c       $(INCLUDE)
+	$(MOVE) weights_float.bin  $(DATA)
+
+$(DATA)/weights_float.bin: create_weights.py write_weights.py lenet.py
+	$(PYTHON) create_weights.py
+	$(MOVE) weights.h          $(INCLUDE)
+	$(MOVE) auto_infer.c       $(INCLUDE)
+	$(MOVE) weights_float.bin  $(DATA)
 
 $(INCLUDE)/test_images.h: create_test_images.py
 	$(PYTHON) create_test_images.py
-	$(MOVE) test_images.h  $(INCLUDE)
+	$(MOVE) test_images.h      $(INCLUDE)
 
 clean:
 	$(REMOVE) $(INCLUDE)/test_images.h
 	$(REMOVE) $(INCLUDE)/weights.h
+	$(REMOVE) $(INCLUDE)/auto_infer.cpp
 	$(REMOVE) $(DATA)/weights_float.bin
