--- a/python/Makefile
+++ b/python/Makefile
@@ -6,24 +6,27 @@ REMOVE  = rm -rf
 INCLUDE = ../include
 DATA    = ../data
 
-all: $(INCLUDE)/weights.h $(INCLUDE)/test_images.h $(INCLUDE)/auto_infer.c $(DATA)/weights_float.bin
+all: $(INCLUDE)/weights.h $(INCLUDE)/test_images.h $(INCLUDE)/auto_infer.c $(INCLUDE)/regions.h $(DATA)/weights_float.bin 
 
 $(INCLUDE)/weights.h: create_weights.py write_weights.py lenet.py
 	$(PYTHON) create_weights.py
 	$(MOVE) weights.h          $(INCLUDE)
 	$(MOVE) auto_infer.c       $(INCLUDE)
+	$(MOVE) regions.h          $(INCLUDE)
 	$(MOVE) weights_float.bin  $(DATA)
 
 $(INCLUDE)/auto_infer.c: create_weights.py write_weights.py lenet.py
 	$(PYTHON) create_weights.py
 	$(MOVE) weights.h          $(INCLUDE)
 	$(MOVE) auto_infer.c       $(INCLUDE)
+	$(MOVE) regions.h          $(INCLUDE)
 	$(MOVE) weights_float.bin  $(DATA)
 
 $(DATA)/weights_float.bin: create_weights.py write_weights.py lenet.py
 	$(PYTHON) create_weights.py
 	$(MOVE) weights.h          $(INCLUDE)
 	$(MOVE) auto_infer.c       $(INCLUDE)
+	$(MOVE) regions.h          $(INCLUDE)
 	$(MOVE) weights_float.bin  $(DATA)
 
 $(INCLUDE)/test_images.h: create_test_images.py
@@ -34,4 +37,5 @@ clean:
 	$(REMOVE) $(INCLUDE)/test_images.h
 	$(REMOVE) $(INCLUDE)/weights.h
 	$(REMOVE) $(INCLUDE)/auto_infer.cpp
+	$(REMOVE) $(INCLUDE)/regions.cpp
 	$(REMOVE) $(DATA)/weights_float.bin
